# shining-piano

./: Cargo.toml  build-web.sh
assets/: f1.json  f1.ron  f2.json  f2.ron  f3.json  f3.ron
crates/core/: Cargo.toml
crates/core/src/: assets.rs  graphics.rs  input.rs  lib.rs  output.rs  utils.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
src/: assets.rs  graphics.rs  input.rs  main.rs  output.rs
wasm-demo/: index.html
