[workspace]
members = [
    "crates/core",
    "crates/desktop",
    "crates/web"
]
default-members = ["crates/desktop"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"

[workspace.dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy-midi-graph = { git = "https://github.com/grimace87/bevy-midi-graph.git", rev = "579a22a8ceb26e442946cf4daef1817ed39ac8b0" }

