[workspace]
members = [
    "crates/core",
    "crates/desktop",
    "crates/web"
]
default-members = ["crates/desktop"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"

[workspace.dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy-midi-graph = { git = "https://github.com/shining-grimace/bevy-midi-graph.git", rev = "e1f8dbcac07799ccaa4211879ba18de1adba84d8" }

